fix first collapse button doesn't work

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -63,6 +63,7 @@
 }
 .tooltip {
   position: absolute;
+  top: 0;
   width: fit-content;
   min-width: 30px;
   opacity: 0;
